--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,10 +44,11 @@
 
 .header {
   display: grid;
+  align-items: center;
   font-family: "poppins",sans-serif;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   width: 100vw;
-  padding: 25px 160px;
+  padding: 10px 160px;
 }
 
 .header_list {
@@ -72,7 +73,7 @@
 
 .bg {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("/bg.png");
   background-repeat: none;
   background-size: cover;
@@ -85,14 +86,14 @@
 .cover {
   background-color: black;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   opacity: 50%;
   position: absolute;
   z-index: -1;
 }
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .hero {
@@ -109,7 +110,7 @@
 .about_section {
   font-family: "poppins", sans-serif;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background: #282828;
   display: flex;
   justify-content: center;
@@ -140,7 +141,7 @@
 .schedule_container {
   font-family: "poppins", sans-serif;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background: #282828;
   padding: 100px 160px;
 }
@@ -154,6 +155,44 @@
   background: #282828;
   font-family: "poppins", sans-serif;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   padding: 100px 160px;
+}
+
+@media screen and (max-width: 480px) {
+  .payment_section, .hero, .about_section, .schedule_container {
+    padding: 20px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+  }
+
+  .about_section p, .about_section ul li {
+    padding: 0px !important;
+    width: 180%;
+  }
+
+  .padding { 
+    margin-bottom: 40px;
+  }
+
+  .img_wrapper {
+    display: none;
+  }
+
+  .grid_2 {
+    display: none;
+  }
+
+  .logo {
+    max-height: 50px !important;
+  }
+}
+
+
+.logo {
+  filter: invert(100%);
+  max-height: 4vw;
 }
