--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,35 +71,22 @@
   justify-content: end;
 }
 
-.bg {
+.container {
   width: 100vw;
   min-height: 100vh;
-  background-image: url("/bg.png");
+  background-image: url("/bg-1.png");
   background-repeat: none;
   background-size: cover;
   background-position-x: center;
   background-position-y: 65%;
-  position: absolute;
-  z-index: -1;
 }
 
-.cover {
-  background-color: black;
-  width: 100vw;
-  min-height: 100vh;
-  opacity: 50%;
-  position: absolute;
-  z-index: -1;
-}
 
-.container {
-  min-height: 100vh;
-}
 
 .hero {
   font-family: "poppins", sans-serif;
   width: 55vw;
-  height: 80vh;
+  min-height: 80vh;
   padding: 20px 160px;
   display: flex;
   flex-direction: column;
@@ -134,8 +121,7 @@
 }
 
 .img {
-  height: 100%;
-  transform:scale(1.8);
+  height: 100vh;
 }
 
 .schedule_container {
@@ -144,6 +130,11 @@
   min-height: 100vh;
   background: #282828;
   padding: 100px 160px;
+  background-image: url("/bg-3.png");
+  background-repeat: none;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: 60%;
 }
 
 .text {
@@ -157,6 +148,11 @@
   width: 100vw;
   min-height: 100vh;
   padding: 100px 160px;
+  background-image: url("/bg-4.png");
+  background-repeat: none;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: 60%;
 }
 
 @media screen and (max-width: 480px) {
@@ -169,6 +165,9 @@
     width: 100vw;
   }
 
+  .about_section h1 {
+    text-align: left;
+  }
   .about_section p, .about_section ul li {
     padding: 0px !important;
     width: 180%;
@@ -193,6 +192,5 @@
 
 
 .logo {
-  filter: invert(100%);
   max-height: 4vw;
 }
